--- a/index.html
+++ b/index.html
@@ -3,13 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="script.js"></script>
     <title>Papers Scissors Rock</title>
 </head>
 <body>
-    
-<script>
-    console.log("Hello World!")
-</script>
 
 </body>
 </html>
